plex/plex.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
  labels:
    app: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    metadata:
      labels:
        app: plex
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex:latest
          resources:
            requests:
              memory: "205Mi"
          volumeMounts:
            - name: library
              mountPath: /config
            - name: tv
              mountPath: /tv
            - name: movies
              mountPath: /movies
      volumes:
        - name: library
          persistentVolumeClaim:
            claimName: plex-config
        - name: tv
          persistentVolumeClaim:
            claimName: plex-tv
        - name: movies
          persistentVolumeClaim:
            claimName: plex-movies
