plex/plex-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: plex
  labels:
    app: plex
spec:
  ports:
    - port: 32400
      protocol: TCP
      targetPort: 32400
      name: plex
  selector:
    app: plex
